BusOne/src/objects/Contract_vod__c.object
<CustomObject>
    <description>Contract header to establish an agreement between the company and one or more parties (accounts).</description>
    <fields>
        <fullName>Account_Specific_Template_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags a Contract template as associated with a particular account(s).</description>
        <label>Account Specific Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags the Contract record as an Agreement. Records flagged as Agreements do not appear in Order Management and Inventory Monitoring.</description>
        <label>Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for contract target batch job.</description>
        <label>Enable Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Objective_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Call Objective from which the contract record was created</description>
        <label>Call Objective</label>
        <referenceTo>Call_Objective_vod__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to make this particuler contract the default one among other valid contracts.</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Stores and shows the statement describing the contract.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type_vod__c</fullName>
        <description>Used to capture the device used to generate the record.</description>
        <label>Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>iPad_vod</fullName>
                </value>
                <value>
                    <fullName>WinModern_vod</fullName>
                </value>
                <value>
                    <fullName>Tablet_vod</fullName>
                </value>
                <value>
                    <fullName>Online_vod</fullName>
                </value>
                <value>
                    <fullName>Data_Load_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disclaimer_vod__c</fullName>
        <description>Displays the disclaimer value from the Veeva Message DISCLAIMER in the CONTRACTS category.</description>
        <label>Disclaimer</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EM_Catalog_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Print Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EM_Catalog_vod__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Contract_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Catalog_vod__c</referenceTo>
        <relationshipLabel>Contract Data Templates</relationshipLabel>
        <relationshipName>Contract_Data_Templates_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EM_Tier_vod__c</fullName>
        <description>Used to find Speakers with matching Tier information for generating Speaker Contracts.</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EM_Total_Payment_vod__c</fullName>
        <description>Indicates the final payment value to be applied at the contract level. This field is only used by Veeva Event Management.</description>
        <label>Total Payment</label>
        <summarizedField>Contract_Line_vod__c.EM_Total_Payment_vod__c</summarizedField>
        <summaryForeignKey>Contract_Line_vod__c.Contract_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>End date of the contract.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired_vod__c</fullName>
        <description>If current date &gt; End_Date_vod__c, the contract is considered expired. Used to facilitate reporting.</description>
        <formula>End_Date_vod__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Inventory_Monitoring_Type_vod__c</fullName>
        <description>Inventory Monitoring record type that the contract is valid for.</description>
        <label>Inventory Monitoring Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory Monitoring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>Language of the Contract</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Batch_Datetime_vod__c</fullName>
        <description>Last date and time this contract was updated by the batch job.</description>
        <label>Last Batch Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If locked, cannot be edited.</description>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Date and time the Contract was created on the mobile device.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Last_Modified_Datetime_vod__c</fullName>
        <description>Date and time the Contract was last modified on the mobile device.</description>
        <label>Mobile Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This allows a non-Admin User to make changes to a Submitted Contract or Contract Lines without requiring the User to unlock the Order. This is only intended for integration and/or custom pages/coding i.e. not through our Contract User Interface</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Bound_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled, only the products associated to this contract via pricing rules will be selectable when creating a new order related to this contract. For inventory monitoring, only products with corresponding Contract Lines can be selected. If disabled, other products will be selectable as well.</description>
        <label>Product Bound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Start date of the contract.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Stores and shows the status of the contract.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved_vod</fullName>
                </value>
                <value>
                    <fullName>Signed_vod</fullName>
                </value>
                <value>
                    <fullName>Rejected_vod</fullName>
                </value>
                <value>
                    <fullName>Draft_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In_Approval_Process_vod</fullName>
                </value>
                <value>
                    <fullName>Activated_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_Name_vod__c</fullName>
        <description>Name of the Template.</description>
        <label>Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags the Contract record as a Template. Records flagged as Templates do not appear in Order Management and Inventory Monitoring.</description>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wholesaler_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to associate a particular wholesaler to a contract.</description>
        <label>Wholesaler</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Wholesaler_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <recordTypes>
        <fullName>EM_Speaker_Contract_vod</fullName>
        <active>true</active>
        <description>Used to define a contract for speaker services.</description>
        <label>EM_Speaker_Contract_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Listing_vod</fullName>
        <active>true</active>
        <description>Used for Contracts that will be associated with Inventory Monitoring.</description>
        <label>Listing_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_vod</fullName>
        <active>true</active>
        <description>Used for Contracts that will be associated with Orders.</description>
        <label>Sales_vod</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>End_Date_After_Start_Date</fullName>
        <active>true</active>
        <description>End Date must be later than Start Date.</description>
        <errorConditionFormula>End_Date_vod__c &lt; Start_Date_vod__c</errorConditionFormula>
        <errorMessage>The End Date cannot be before the Start Date.</errorMessage>
    </validationRules>
</CustomObject>